[gd_scene load_steps=11 format=3 uid="uid://c65o5y2weg82m"]

[ext_resource type="Script" uid="uid://b8gi3q1fb0gxj" path="res://scripts/UI/ShowProjectInfos.gd" id="1_2gvgq"]
[ext_resource type="Texture2D" uid="uid://h8vpungsiv7a" path="res://assets/UI/tilesetT3.png" id="1_ycggi"]
[ext_resource type="Texture2D" uid="uid://b3m3k28fnmlei" path="res://assets/UI/tilesetT3_pressed.png" id="3_qxkio"]
[ext_resource type="Texture2D" uid="uid://bs5aawnei770f" path="res://assets/UI/tilesetT3_hovered.png" id="4_jfwcn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qxkio"]
atlas = ExtResource("1_ycggi")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo82y"]
atlas = ExtResource("3_qxkio")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfwcn"]
atlas = ExtResource("4_jfwcn")
region = Rect2(320, 384, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwadq"]
atlas = ExtResource("1_ycggi")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cew7"]
atlas = ExtResource("3_qxkio")
region = Rect2(0, 448, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4qnv"]
atlas = ExtResource("4_jfwcn")
region = Rect2(0, 448, 64, 64)

[node name="SubMenuShowProjectInfos" type="MarginContainer"]
custom_minimum_size = Vector2(500, 500)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_2gvgq")
icon_normal = SubResource("AtlasTexture_qxkio")
icon_pressed = SubResource("AtlasTexture_wo82y")
icon_hover = SubResource("AtlasTexture_jfwcn")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_ycggi")
region_rect = Rect2(320, 448, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblName" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnQuit" type="TextureButton" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_iwadq")
texture_pressed = SubResource("AtlasTexture_4cew7")
texture_hover = SubResource("AtlasTexture_t4qnv")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Gains :"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 5
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(234, 0)
layout_mode = 2

[node name="lblRewardScience" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Science :"

[node name="lblRewardNbrSc" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblRewardProdScience" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Science par secondes :"

[node name="lblRewardNbrScPS" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblRewardSlots" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Places pour les scientifiques :"

[node name="lblRewardNbrSlots" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer3"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="HBoxContainer4" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblRewardPollution" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Pollution :"

[node name="lblRewardNbrPoll" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer4"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="HBoxContainer5" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="lblRewardPollutionPreSec" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Pollution par secondes :"

[node name="lblRewardNbrPollPS" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer5"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="HBoxContainer6" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lblRewardWellness" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Bien-être :"

[node name="lblRewardNbrWB" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/VBoxContainer/GridContainer/HBoxContainer6"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "0"

[node name="lblDesc" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Desc"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="lblStat" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Status :"

[node name="lblStatus" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Non commencé"

[node name="nineIcon" type="NinePatchRect" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
texture = ExtResource("1_ycggi")
region_rect = Rect2(320, 384, 64, 64)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="btnStart" type="Button" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/nineIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
text = "Commencer"
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ProgressBar" type="ProgressBar" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="lblTimeLeft" type="Label" parent="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "00:30"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer3/btnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="mouse_entered" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/nineIcon/btnStart" to="." method="_on_btn_start_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/nineIcon/btnStart" to="." method="_on_btn_start_mouse_exited"]
[connection signal="pressed" from="NinePatchRect/MarginContainer/VBoxContainer/HBoxContainer/nineIcon/btnStart" to="." method="_on_btn_start_pressed"]
